@@ -63,7 +63,9 @@ EXULT_FLX_OBJECTS = \
 	data/pointers.shp \
 	data/exit.shp \
 	data/play_1st_scene.shp \
-	data/extras.shp
+	data/extras.shp \
+	data/midi_conversion.shp \
+	data/sfx_conversion.shp
 
 $(EXEC) : $(OBJS) data/exult.flx
 	$(CXX) $(LFLAGS) -o $@ $(OBJS) $(LIBS)
