@@ -2,8 +2,8 @@ dnl Process this file with autoconf to produce a configure script.
 AC_INIT(exult.cc)
 
 PACKAGE=exult
-MAJOR=0.90
-RELNUM=alpha1
+MAJOR=0
+RELNUM=99.0
 VERSION=$MAJOR.$RELNUM
 
 AM_INIT_AUTOMAKE($PACKAGE,$VERSION,no-define)
