@@ -23,3 +23,5 @@ Entry		File
 17		"Exit" shape
 18		"Play First Scene" shape
 19		Extra shapes for Credits
+20		"Midi conversion"
+21		"SFX conversion"
